--- a/lang/chinese.txt
+++ b/lang/chinese.txt
@@ -24,6 +24,8 @@ DESC_DXVKVARS="DXVK 变量 - 见'XXX'"
 DESC_DXVK_HUD="接受逗号分隔的选项，例如"
 DESC_DXVK_LOG_LEVEL="控制 DXVK 消息记录"
 DESC_FORK_CUSTOMCMD="将自定义命令分叉到后台，并继续从常规游戏可执行文件开始"
+DESC_GAMCON="GameConqueror的可执行文件 - 默认是直接的Python脚本，因为它没有使用pkexec"
+DESC_GAMCONWAITEXE="GameConqueror应该打开的替代可执行文件，而不是常规游戏的exe"
 DESC_GAMEARGS="用于游戏的自己/自定义命令行参数"
 DESC_GAMESCOPE_ARGS="这个游戏的gamescope的命令行参数"
 DESC_GLOBALCOLLECTIONDIR="存放Steam全局类别调整文件的路径"
@@ -67,6 +69,7 @@ DESC_RS_64_VK="64位 ReShade JSON 文件名"
 DESC_D3D47_32="32位的d3dcompiler_47.dll的文件名"
 DESC_D3D47_64="64位d3dcompiler_47.dll的文件名"
 DESC_RUNSBSVR="在VR中以并排立体3D模式启动这个游戏"
+DESC_RUN_GAMCON="为这个游戏启用GameConqueror"
 DESC_RUN_NYRNA="为这个游戏启用Nyrna"
 DESC_RUN_REPLAY="为这个游戏启用ReplaySorcery"
 DESC_RUN_WINECFG="在游戏开始前启动winecfg"
@@ -124,6 +127,8 @@ GUI_EDIT="编辑"
 GUI_EDITABLECFGS="个可编辑的配置文件"
 GUI_EDITORDIALOG="'XXX'\n选择配置文件进行手动编辑"
 GUI_FORK_CUSTOMCMD="Fork 自定义命令"
+GUI_GAMCON="GameConqueror命令"
+GUI_GAMCONWAITEXE="GameConqueror等待exe"
 GUI_GAMEARGS="游戏命令参数 (自定义)"
 GUI_USEGAMESCOPE="gamescope"
 GUI_GAMESCOPE_ARGS="gamescope参数"
@@ -198,6 +203,7 @@ GUI_USERSTART="用户启动命令"
 GUI_USERSTOP="用户停止命令"
 GUI_USETRAYICON="使用托盘图标"
 GUI_USEBOXTRON="Boxtron"
+GUI_RUN_GAMCON="GameConqueror"
 GUI_USELUXTORPEDA="Luxtorpeda"
 GUI_RUN_NYRNA="Nyrna"
 GUI_USEROBERTA="Roberta"
