--- a/lang/dutch.txt
+++ b/lang/dutch.txt
@@ -24,6 +24,8 @@ DESC_DXVKVARS="DXVK variabelen - zie 'XXX'"
 DESC_DXVK_HUD="Accepteerd kommagescheiden opties zoals"
 DESC_DXVK_LOG_LEVEL="Bestuurd DXVK berichten loggen"    
 DESC_FORK_CUSTOMCMD="Fork de aangepaste opdracht in de achtergrond en ga door met het normale spel uitvoeringsbestand te starten"
+DESC_GAMCON="Het GameConqueror uitvoerbare bestand - standaard is het direct Python script aangezien deze geen pkexec gebruikt"
+DESC_GAMCONWAITEXE="De alternatieve uitvoerbare GameConqueror moet openen in plaats van de normale spel exe"
 DESC_GAMEARGS="De eigen/aangepaste opdrachtregelargumenten gebruikt voor het spel"
 DESC_GAMESCOPE_ARGS="De opdrachtregelargumenten voor gamescope voor dit spel"
 DESC_GLOBALCOLLECTIONDIR="Pad waar globale Steam collection tweak bestanden zijn opgeslagen"
@@ -65,6 +67,7 @@ DESC_RS_64="De bestandsnaam van de 64bit Reshade Dll"
 DESC_D3D47_32="De bestandsnaam van de 32bit d3dcompiler_47.dll"
 DESC_D3D47_64="De bestandsnaam van de 64bit d3dcompiler_47.dll"
 DESC_RUNSBSVR="Start dit spel in VR met Side-by-Side stereo3D modus"
+DESC_RUN_GAMCON="GameConqueror inschakelen voor dit spel"
 DESC_RUN_NYRNA="Nyrna inschakelen voor dit spel"
 DESC_RUN_REPLAY="ReplaySorcery inschakelen voor dit spel"
 DESC_RUN_WINECFG="winecfg starten voordat het spel start"
@@ -122,6 +125,8 @@ GUI_EDIT="Aanpassen"
 GUI_EDITABLECFGS="Aanpasbare configuratiebestanden gevonden"
 GUI_EDITORDIALOG="'XXX'\nSelect configuratiebestanden voor handmatige aanpassingen"
 GUI_FORK_CUSTOMCMD="Fork aangepaste opdracht"
+GUI_GAMCON="GameConqueror opdracht"
+GUI_GAMCONWAITEXE="GameConqueror wacht exe"
 GUI_GAMEARGS="Game opdracht argumenten (aangepast)"
 GUI_USEGAMESCOPE="gamescope"
 GUI_GAMESCOPE_ARGS="gamescope argumenten"
@@ -194,6 +199,7 @@ GUI_USERSTART="Gebruiker start operatie"
 GUI_USERSTOP="Gebruiker stop operatie"
 GUI_USETRAYICON="Gebruik tray icoon"
 GUI_USEBOXTRON="Boxtron"
+GUI_RUN_GAMCON="GameConqueror"
 GUI_USELUXTORPEDA="Luxtorpeda"
 GUI_RUN_NYRNA="Nyrna"
 GUI_USEROBERTA="Roberta"
