--- a/lang/english.txt
+++ b/lang/english.txt
@@ -24,6 +24,8 @@ DESC_DXVKVARS="DXVK variables - see 'XXX'"
 DESC_DXVK_HUD="Accepts comma-separated options like"
 DESC_DXVK_LOG_LEVEL="Controls DXVK message logging"
 DESC_FORK_CUSTOMCMD="Fork the custom command into the background and continue starting with the regular game executable"
+DESC_GAMCON="The GameConqueror executable file - default is the direct Python script as it doesn't use pkexec"
+DESC_GAMCONWAITEXE="The alternative executable GameConqueror should open instead of the regular game exe"
 DESC_GAMEARGS="The own/custom command line arguments used for the game"
 DESC_GAMESCOPE_ARGS="The command line arguments for gamescope for this game"
 DESC_GLOBALCOLLECTIONDIR="Path where global Steam collection tweak files are stored"
@@ -67,6 +69,7 @@ DESC_RS_64_VK="The filename of the 64bit ReShade JSON"
 DESC_D3D47_32="The filename of the 32bit d3dcompiler_47.dll"
 DESC_D3D47_64="The filename of the 64bit d3dcompiler_47.dll"
 DESC_RUNSBSVR="Start this game in VR in Side-by-Side Stereo3D mode"
+DESC_RUN_GAMCON="Enable GameConqueror for this game"
 DESC_RUN_NYRNA="Enable Nyrna for this game"
 DESC_RUN_REPLAY="Enable ReplaySorcery for this game"
 DESC_RUN_WINECFG="Start winecfg before the game starts"
@@ -124,6 +127,8 @@ GUI_EDIT="Edit"
 GUI_EDITABLECFGS="editable config files found"
 GUI_EDITORDIALOG="'XXX'\nSelect config files for manual editing"
 GUI_FORK_CUSTOMCMD="Fork custom command"
+GUI_GAMCON="GameConqueror command"
+GUI_GAMCONWAITEXE="GameConqueror wait exe"
 GUI_GAMEARGS="Game command arguments (custom)"
 GUI_USEGAMESCOPE="gamescope"
 GUI_GAMESCOPE_ARGS="gamescope arguments"
@@ -198,6 +203,7 @@ GUI_USERSTART="User start command"
 GUI_USERSTOP="User stop command"
 GUI_USETRAYICON="Use tray icon"
 GUI_USEBOXTRON="Boxtron"
+GUI_RUN_GAMCON="GameConqueror"
 GUI_USELUXTORPEDA="Luxtorpeda"
 GUI_RUN_NYRNA="Nyrna"
 GUI_USEROBERTA="Roberta"
