--- a/lang/french.txt
+++ b/lang/french.txt
@@ -24,6 +24,8 @@ DESC_DXVKVARS="Variables DXVK - voir 'XXX'"
 DESC_DXVK_HUD="Accepts comma-separated options like"
 DESC_DXVK_LOG_LEVEL="Contrôler la journalisation des messages DXVK"
 DESC_FORK_CUSTOMCMD="L'exécutable alternatif que GameConqueror devrait ouvrir à la place de l'exe du jeu"
+DESC_GAMCON="Le fichier exécutable de GameConqueror - par défaut, c'est le script Python direct car il n'utilise pas pkexec"
+DESC_GAMCONWAITEXE="L'exécutable alternatif que GameConqueror devrait ouvrir à la place de l'exe du jeu"
 DESC_GAMEARGS="Les arguments de ligne de commande par défaut/personnalisés utilisés pour le jeu"
 DESC_GAMESCOPE_ARGS="Les arguments de gamescope pour ce jeu"
 DESC_GLOBALCOLLECTIONDIR="Chemin où sont stockés les fichiers tweak globaux de la catégorie Steam"
@@ -65,6 +67,7 @@ DESC_RS_64="Le nom du fichier DLL ReShade 64bit"
 DESC_D3D47_32="Le nom du fichier DLL d3dcompiler_47.dll 32bit"
 DESC_D3D47_64="Le nom du fichier DLL d3dcompiler_47.dll 64bit"
 DESC_RUNSBSVR="Lancer ce jeu en VR en mode Side-by-Side Stereo3D"
+DESC_RUN_GAMCON="Activer GameConqueror pour ce jeu"
 DESC_RUN_NYRNA="Activer Nyrna pour ce jeu"
 DESC_RUN_REPLAY="Activer ReplaySorcery pour ce jeu"
 DESC_RUN_WINECFG="Lancer winecfg avant le lancement du jeu"
@@ -122,6 +125,8 @@ GUI_EDIT="Modifier"
 GUI_EDITABLECFGS="Fichiers de configuration éditables trouvés"
 GUI_EDITORDIALOG="'XXX'\nSélectionner les fichiers de configuration pour une édition manuelle"
 GUI_FORK_CUSTOMCMD="Fork custom command"
+GUI_GAMCON="Commande GameConqueror"
+GUI_GAMCONWAITEXE="Exe d'attente GameConqueror"
 GUI_GAMEARGS="Game command arguments (custom)"
 GUI_USEGAMESCOPE="gamescope"
 GUI_GAMESCOPE_ARGS="Arguments de gamescope"
@@ -193,6 +198,7 @@ GUI_USERSTART="User start command"
 GUI_USERSTOP="User stop command"
 GUI_USETRAYICON="Utiliser l'icône de la barre des taches"
 GUI_USEBOXTRON="Boxtron"
+GUI_RUN_GAMCON="GameConqueror"
 GUI_USELUXTORPEDA="Luxtorpeda"
 GUI_RUN_NYRNA="Nyrna"
 GUI_USEROBERTA="Roberta"
