--- a/lang/german.txt
+++ b/lang/german.txt
@@ -24,6 +24,8 @@ DESC_DXVKVARS="Dxvk Variablen - siehe 'XXX'"
 DESC_DXVK_HUD="Akzeptiert komma-separierte Optionen folgendermaßen"
 DESC_DXVK_LOG_LEVEL="Kontrolliert das dxvk Nachrichten Logging"
 DESC_FORK_CUSTOMCMD="Den benutzerdefinierten Befehl im Hintergrund ausführen und mit dem Laden des Spiels forfahren"
+DESC_GAMCON="Die ausführbare Datei für den GameConqueror - voreingestellöt ist das direkte python Script, da es kein pkexec verwendet"
+DESC_GAMCONWAITEXE="Die ausführbare Datei, die der GameConqueror statt der regulären Spieledatei öffnen soll."
 DESC_GAMEARGS="Die eigenen/custom Kommandozeilenparameter für das Spiel"
 DESC_GAMESCOPE_ARGS="Die GameScope Kommandozeilenparameter für dieses Spiel"
 DESC_GLOBALCOLLECTIONDIR="Systemweiter Pfad zu den Steam Kollektion Tweaks"
@@ -65,6 +67,7 @@ DESC_RS_64="Der Dateiname der 64bit ReShade dll"
 DESC_D3D47_32="Der Dateiname der 32bit d3dcompiler_47.dll"
 DESC_D3D47_64="Der Dateiname der 64bit d3dcompiler_47.dll"
 DESC_RUNSBSVR="Starte this game in VR im Side-by-Side Stereo3D Modus"
+DESC_RUN_GAMCON="Starte GameConqueror für dieses Spiel"
 DESC_RUN_NYRNA="Starte Nyrna für dieses Spiel"
 DESC_RUN_REPLAY="Starte ReplaySorcery für dieses Spiel"
 DESC_RUN_WINECFG="Öffne winecfg bevor das Spiel startet"
@@ -122,6 +125,8 @@ GUI_EDIT="Bearbeiten"
 GUI_EDITABLECFGS="bearbeitbare Konfigurationsdateien gefunden"
 GUI_EDITORDIALOG="'XXX'\nWähle Konfigurationsdatei zum manuellen Bearbeiten"
 GUI_FORK_CUSTOMCMD="Benutzerdefinierten Befehl abzweigen"
+GUI_GAMCON="GameConqueror Befehl"
+GUI_GAMCONWAITEXE="Game Conqueror alternative Datei"
 GUI_GAMEARGS="Kommandozeilenparameter für das Spiel (custom)"
 GUI_USEGAMESCOPE="GameScope"
 GUI_GAMESCOPE_ARGS="Kommandozeilenparameter für GameScope"
@@ -194,6 +199,7 @@ GUI_USERSTART="Benutzer Start Befehl"
 GUI_USERSTOP="Benutzer Stop Befehl"
 GUI_USETRAYICON="Verwende Tray Icon"
 GUI_USEBOXTRON="Boxtron"
+GUI_RUN_GAMCON="Game Conqueror"
 GUI_USELUXTORPEDA="Luxtorpeda"
 GUI_RUN_NYRNA="Nyrna"
 GUI_USEROBERTA="Roberta"
