--- a/lang/italian.txt
+++ b/lang/italian.txt
@@ -24,6 +24,8 @@ DESC_DXVKVARS="Variabili Dxvk - vedi 'XXX'"
 DESC_DXVK_HUD="Accetta opzioni separati da virgola come"
 DESC_DXVK_LOG_LEVEL="Controlla il log dei messaggi dxvk"
 DESC_FORK_CUSTOMCMD="Forka il comando personalizzato in background e continua l'avvio con l'eseguibile regolare del gioco"
+DESC_GAMCON="Il file eseguibile di gameconqueror - il default è direttamente lo script python dal momento che non usa pkexec"
+DESC_GAMCONWAITEXE="L'eseguibile alternativo di GameConqueror dovrebbe aprirsi invece dell'eseguibile regolare del gioco."
 DESC_GAMEARGS="Gli argomenti da linea di comando usati per il gioco (custom)"
 DESC_GAMESCOPE_ARGS="Gli argomenti da linea di comando usati da GameScope per questo gioco"
 DESC_GLOBALCOLLECTIONDIR="Percorso in cui sono salvati i file di Tweak globali delle categorie Steam"
@@ -65,6 +67,7 @@ DESC_RS_64="Il nome file della dll 64bit diReShade"
 DESC_D3D47_32="Il nome file della versione 32 bit di d3dcompiler_47.dll"
 DESC_D3D47_64="Il nome file della versione 64 bit di d3dcompiler_47.dll"
 DESC_RUNSBSVR="Avvia questo gioco in VR in modalità Side-by-Side Stereo3D"
+DESC_RUN_GAMCON="Abilita GameConqueror per questo gioco"
 DESC_RUN_NYRNA="Abilita Nyrna per questo gioco"
 DESC_RUN_REPLAY="Abilita ReplaySorcery per questo gioco"
 DESC_RUN_WINECFG="Avvia winecfg prima che parta il gioco"
@@ -122,6 +125,8 @@ GUI_EDIT="Modifica"
 GUI_EDITABLECFGS="File di configurazione modificabili trovati"
 GUI_EDITORDIALOG="'XXX'\nSeleziona file di configurazione per la modifica manuale"
 GUI_FORK_CUSTOMCMD="Forka un comando personalizzato"
+GUI_GAMCON="comando per GameConqueror"
+GUI_GAMCONWAITEXE="Eseguibile alternativo di Game Conqueror"
 GUI_GAMEARGS="Argomenti per Game command (custom)"
 GUI_USEGAMESCOPE="GameScope"
 GUI_GAMESCOPE_ARGS="Argomenti per GameScope"
@@ -194,6 +199,7 @@ GUI_USERSTART="Comando per avvio utente"
 GUI_USERSTOP="Comando per stop utente"
 GUI_USETRAYICON="Usa la Tray Icon"
 GUI_USEBOXTRON="Boxtron"
+GUI_RUN_GAMCON="Game Conqueror"
 GUI_USELUXTORPEDA="Luxtorpeda"
 GUI_RUN_NYRNA="Nyrna"
 GUI_USEROBERTA="Roberta"
