--- a/lang/polish.txt
+++ b/lang/polish.txt
@@ -24,6 +24,8 @@ DESC_DXVKVARS="Zmienne DXVK – zobacz 'XXX'"
 DESC_DXVK_HUD="Akceptuje rozdzielone przecinkami opcje w stylu"
 DESC_DXVK_LOG_LEVEL="Kontroluje zapisywanie wiadomości DXVK"
 DESC_FORK_CUSTOMCMD="Zmodyfikuj własne polecenie w tle i kontynuuj uruchamianie ze zwykłym plikiem wykonywalnym gry"
+DESC_GAMCON="Plik wykonywalny gameconqueror – domyślnie jest to bezpośredni skrypt Pythona, z racji że nie używa pkexec"
+DESC_GAMCONWAITEXE="Alternatywny plik wykonwywalny GameConqueror powinien się otworzyć zamiast zwykłego pliku wykonywalnego gry"
 DESC_GAMEARGS="Argumenty wiersza poleceń używane do gry (custom)"
 DESC_GAMESCOPE_ARGS="Argumenty wiersza poleceń do gamescope dla tej gry"
 DESC_GLOBALCOLLECTIONDIR="Ścieżka gdzie są przechowywane globalne pliki poprawek kategorii Steam"
@@ -65,6 +67,7 @@ DESC_RS_64="Nazwa pliku dla 64-bitowego DLL ReShade"
 DESC_D3D47_32="Nazwa pliku dla 32-bitowego d3dcompiler_47.dll"
 DESC_D3D47_64="Nazwa pliku dla 64-bitowego d3dcompiler_47.dll"
 DESC_RUNSBSVR="Uruchom tę grę VR w trybie Stereo3D Side-by-Side"
+DESC_RUN_GAMCON="Włącz GameConqueror dla tej gry"
 DESC_RUN_NYRNA="Włącz Nyrna dla tej gry"
 DESC_RUN_REPLAY="Włącz ReplaySorcery dla tej gry"
 DESC_RUN_WINECFG="Uruchom Winecfg przed uruchomienim gry"
@@ -122,6 +125,8 @@ GUI_EDIT="Edycja"
 GUI_EDITABLECFGS="znalezionych plików konfiguracji do edycji"
 GUI_EDITORDIALOG="'XXX'\nWybierz pliki konfiguracji do ręcznej edycji"
 GUI_FORK_CUSTOMCMD="Zmodyfikuj własne polecenie"
+GUI_GAMCON="Polecenie GameConqueror"
+GUI_GAMCONWAITEXE="Plik wykonywalny do czekania dla GameConqueror"
 GUI_GAMEARGS="Argumenty polecenie gry (custom)"
 GUI_USEGAMESCOPE="Gamescope"
 GUI_GAMESCOPE_ARGS="Argumenty Gamescope"
@@ -194,6 +199,7 @@ GUI_USERSTART="Polecenie uruchomienia użytkownika"
 GUI_USERSTOP="Polecenie zatrzymania użytkownika"
 GUI_USETRAYICON="Używaj ikony paska zadań"
 GUI_USEBOXTRON="Boxtron"
+GUI_RUN_GAMCON="GameConqueror"
 GUI_USELUXTORPEDA="Luxtorpeda"
 GUI_RUN_NYRNA="Nyrna"
 GUI_USEROBERTA="Roberta"
