--- a/lang/russian.txt
+++ b/lang/russian.txt
@@ -24,6 +24,8 @@ DESC_DXVKVARS="Переменные для Dxvk - смотрите 'XXX'"
 DESC_DXVK_HUD="Также принимает разделенные запятыми параметры вида"
 DESC_DXVK_LOG_LEVEL="Степень подробности логов для dxvk"
 DESC_FORK_CUSTOMCMD="Запустить пользовательскую команду в фоновом режиме и продолжить запуск родного исполнительного файла игры"
+DESC_GAMCON="Команда или файл запуска gameconqueror - по умолчанию это скрипт для python не использующий pkexec"
+DESC_GAMCONWAITEXE="Альтернативный файл запуска, передаваемый в GameConqueror - должен открыться в GameConqueror вместо родного исполняемого файла игры."
 DESC_GAMEARGS="Аргументы командной строки используемые для запуска игры (custom)"
 DESC_GAMESCOPE_ARGS="Аргументы командной строки GameScope используемые для данной игры"
 DESC_GLOBALCOLLECTIONDIR="Директория, в которой хранятся файлы Steam collection Tweak"
@@ -65,6 +67,7 @@ DESC_RS_64="Имя файла для 64bit реализации ReShade dll"
 DESC_D3D47_32="Имя файла для 32bit реализации d3dcompiler_47.dll"
 DESC_D3D47_64="Имя файла для 64bit реализации d3dcompiler_47.dll"
 DESC_RUNSBSVR="Запуск игры в режиме VR in Side-by-Side Stereo3D"
+DESC_RUN_GAMCON="Включить GameConqueror для этой игры"
 DESC_RUN_NYRNA="Включить Nyrna для этой игры"
 DESC_RUN_REPLAY="Включить ReplaySorcery для этой игры"
 DESC_RUN_WINECFG="Запустить настройку winecfg перед запуском игры"
@@ -122,6 +125,8 @@ GUI_EDIT="Редактировать"
 GUI_EDITABLECFGS="редактируемых конфигурационных файлов обнаружено"
 GUI_EDITORDIALOG="'XXX'\nВыберите файлы конфигурации для ручного редактирования"
 GUI_FORK_CUSTOMCMD="Отделить команду пользователя"
+GUI_GAMCON="Запуск GameConqueror"
+GUI_GAMCONWAITEXE="Game Conqueror ожидает Exe"
 GUI_GAMEARGS="Аргументы запуска Игры (custom)"
 GUI_USEGAMESCOPE="GameScope"
 GUI_GAMESCOPE_ARGS="Дополнительные аргументы GameScope"
@@ -194,6 +199,7 @@ GUI_USERSTART="Команда при запуске игры"
 GUI_USERSTOP="Команда при завершении игры"
 GUI_USETRAYICON="Отображать иконку в трее"
 GUI_USEBOXTRON="Boxtron"
+GUI_RUN_GAMCON="Game Conqueror"
 GUI_USELUXTORPEDA="Luxtorpeda"
 GUI_RUN_NYRNA="Nyrna"
 GUI_USEROBERTA="Roberta"
